--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -29,7 +29,7 @@
       <div class="col-lg-6">
         <div class="card border-0 shadow-lg">
           <div class="ratio ratio-4x3 rounded-top" style="background:url('') center/cover no-repeat;">
-            <img src="assets/avangard_project_42_with3d.png"/>
+            <img src="../../../assets/projects/house-1-level-42/front-left.png"/>
           </div>
           <div class="card-body">
             <h5 class="card-title fw-semibold mb-2">Современные технологии строительства</h5>
@@ -59,7 +59,7 @@
       <div class="col-md-6 col-lg-4" *ngFor="let project of projects">
         <div class="card h-100 shadow-sm border-0">
           <div class="card-body d-flex flex-column">
-            <img src="{{project.images[0]}}"/>
+            <img src="{{getMainImage(project.images)}}"/>
             <h5 class="card-title fw-semibold">{{ project.name }}</h5>
             <p class="card-text small mb-2 text-muted">{{ project.description }}</p>
             <div class="mt-auto d-flex justify-content-between align-items-center">
