--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -10,7 +10,7 @@
       <div class="col-md-6 col-lg-4" *ngFor="let item of projects">
         <div class="card h-100 shadow-sm border-0">
           <div class="card-body d-flex flex-column">
-            <img src="{{item.images[0]}}"/>
+            <img src="{{getMainImage(item.images)}}"/>
             <h5 class="card-title fw-semibold">{{ item.name }}</h5>
             <p class="card-text small mb-2 text-muted">{{ item.description }}</p>
             <div class="mt-auto d-flex justify-content-between align-items-center">
